--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,16 @@
     <string name="send">Send</string>
 
     <string-array name="luxuryImportance">
-        <item>Çok</item>
-        <item>Orta</item>
-        <item>Az</item>
-        <item>Farketmez</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
     </string-array>
 
     <string-array name="priceRange">
